added env managing and bootstraped mongo config

--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "Backend of the auto-cv project",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon index.js",
-    "build": "NODE_ENV=pro node index.js",
+    "dev": "ENVIRONMENT=dev nodemon index.js",
+    "prod": "ENVIRONMENT=prod node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.12.1"
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "mongoose": "5.12.1"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "eslint": "7.22.0",
+    "jest": "26.6.3",
+    "nodemon": "2.0.7"
   }
 }
