--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^6.3.1",
+    "@sentry/tracing": "^6.3.1",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
