added controller user, model curriculum and bcrypt dependency

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sentry/node": "^6.3.1",
     "@sentry/tracing": "^6.3.1",
+    "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
