--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ENVIRONMENT=dev nodemon index.js",
     "dev_win": "set ENVIRONMENT=dev&& nodemon index.js",
     "prod": "ENVIRONMENT=prod node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +25,14 @@
     "eslint": "7.22.0",
     "jest": "26.6.3",
     "nodemon": "2.0.7"
+  },
+  "eslintConfig" : {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "env": {
+      "jest": true
+    }
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
