--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
-    "mongoose": "5.12.1"
+    "mongoose": "5.12.1",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
