--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "html-pdf": "3.0.1",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.12.1",
     "mongoose-unique-validator": "^2.0.3"
